--- a/resources/public/css/starwars.css
+++ b/resources/public/css/starwars.css
@@ -89,6 +89,39 @@ margin: 0px;
 	text-decoration: none;
 }
 
+.button_02 a{
+	clear: both;
+	display: block;
+	width: 100px ;
+	height: 23px ;
+	padding-top: 5px;
+	background: url(/images/templatemo_button_01.png) no-repeat;
+	
+	
+	color: #000;
+	font-size: 13px;
+	font-weight: bold;
+	text-align: center;
+	text-decoration: none;
+}
+
+.button_02 input{
+    clear: both;
+	display: block;
+	width: 100px ;
+	height: 30px ;
+	border:none;
+	background: url(/images/templatemo_button_01.png) no-repeat;
+	
+	
+	
+	color: #000;
+	font-size: 13px;
+	font-weight: bold;
+	text-align: center;
+	text-decoration: none;
+}
+
 
 .header_01 {
 	clear: both;
